--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         translationEl.textContent = "";
 
         try {
-        const response = await fetch("https://daily-word-api.onrender.com/api/word");
+        const response = await fetch("https://english-word-booster.onrender.com/api/word");
           const data = await response.json();
 
           if (data.error) throw new Error(data.error);
